--- a/section5/yolo_with_video/main.ipynb
+++ b/section5/yolo_with_video/main.ipynb
@@ -773,9 +773,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This,part can't be displayed at github\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -789,7 +796,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,6 +804,7 @@
    "source": [
     "from IPython.display import HTML\n",
     "\n",
+    "print('This part can\\'t be displayed at github')\n",
     "HTML(\"\"\"\n",
     "<video width=\\\"\"\"\"+str(768)+\"\"\"\\\" controls>\n",
     "  <source src=\"output_video.mp4\" type=\"video/mp4\">\n",
