--- a/section5/yolo_with_video/main.ipynb
+++ b/section5/yolo_with_video/main.ipynb
@@ -773,14 +773,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This,part can't be displayed at github\n"
+      "This part can't be displayed at github\n"
      ]
     },
     {
@@ -796,7 +796,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
