--- a/section5/yolo_with_image/main.ipynb
+++ b/section5/yolo_with_image/main.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
    "source": [
     "model = YOLO(\"yolo11m.pt\")\n",
     "\n",
-    "path = \"cat_dog.jpg\"\n",
+    "path = \"8.jpg\"\n",
     "results = model(source=path,conf=0.4)"
    ]
   },
